15.6
-----
* [***] Block Editor: Fixed empty text fields on RTL layout. Now they are selectable and placeholders are visible.
* [**] Block Editor: Add settings to allow changing column widths
* [**] Block Editor: Media editing support in Gallery block.
* [*] Block Editor: Improved logic for creating undo levels.
* [*] Social account login: Fixed an issue that could have inadvertently linked two social accounts.

15.5
-----
* [*] Reader: revamped UI for your site header.
* [***] Block Editor: New feature for WordPress.com and Jetpack sites: auto-complete username mentions. An auto-complete popup will show up when the user types the @ character in the block editor.
* [*] Block Editor: Media editing support in Cover block.
* [*] Block Editor: Fixed a bug on the Heading block, where a heading with a link and string formatting showed a white shadow in dark mode.

15.4
-----
 * [**] Fixes issue where the new page editor wouldn't always show when selected from the "My Site" page on iOS versions 12.4 and below. 
 * [***] Block Editor: Media editing support in Media & Text block.
 * [***] Block Editor: New block: Social Icons
 * [*] Block Editor: Cover block placeholder is updated to allow users to start the block with a background color
 * [**] Improved support for the Classic block to give folks a smooth transition from the classic editor to the block editor

15.3
-----
* [***] Block Editor: Adds Copy, Cut, Paste, and Duplicate functionality to blocks
* [***] Block Editor: Users can now individually edit unsupported blocks found in posts or pages. Not available on selfhosted sites or sites defaulting to classic editor.
* [*] Block Editor: Improved editor loading experience with Ghost Effect.
 
15.2
----
* [*] Block editor: Display content metrics information (blocks, words, characters count).
* [*] Fixed a crash that results in navigating to the block editor quickly after logging out and immediately back in.